--- a/src/components/Navbar/ui/Navbar.module.scss
+++ b/src/components/Navbar/ui/Navbar.module.scss
@@ -2,8 +2,8 @@
 	position: fixed;
 	z-index: 100;
 	top: calc(0.5vw + 28px);
-	left: 50%;
-	transform: translateX(-50%);
+	left: 0;
+	width: 100%;
 	color: #FFFFFF;
 
 	.wrapper {
@@ -15,13 +15,72 @@
 			align-items: center;
 			justify-content: space-between;
 			height: 60px;
-			padding: 0 24px;
+			padding: 0 32px;
 
 			.logo {
-				width: 126.06px;
-				height: 38px;
-				margin-left: -8px;
-				padding: 8px;
+				display: block;
+				height: 24px;
+			}
+
+			.links {
+				display: flex;
+				gap: 24px;
+
+				.link {
+					display: block;
+					width: 24px;
+					height: 24px;
+
+					&.menu {
+						display: flex;
+						align-items: flex-end;
+						flex-direction: column;
+						justify-content: space-around;
+						padding: 3px;
+
+						span {
+							display: block;
+							width: 100%;
+							height: 2px;
+							border-radius: 2px;
+							background-color: currentColor;
+
+							&:last-child {
+								width: 75%;
+							}
+						}
+					}
+				}
+			}
+		}
+
+		.content {
+			display: flex;
+			align-items: center;
+			flex-direction: column;
+
+			.links {
+				display: flex;
+				align-items: center;
+				margin-top: 50px;
+
+				.link {
+					display: block;
+					width: 100px;
+				}
+			}
+
+			.sm {
+				display: flex;
+				align-items: center;
+				margin: 50px 0;
+				gap: 48px;
+
+				.link {
+					display: block;
+					width: 32px;
+					height: 32px;
+				}
 			}
 		}
 	}
