--- a/src/app/[lang]/global.scss
+++ b/src/app/[lang]/global.scss
@@ -1,30 +1,21 @@
 @import 'reset';
 
-*, *::before, *::after {
-	cursor: none !important;
-}
-
 ::selection {
 	color: #191A23;
 	background-color: #B9FF66;
 }
 
 body {
+	font-family: var(--sf-pro-display);
 	font-size: clamp(16px, 3vw, 18px);
+	line-height: 160%;
 	height: 200vh;
-	user-select: none;
 	color: #191A23;
 	background-color: #FFFFFF;
 }
 
-@media (pointer: coarse) or (prefers-reduced-motion: reduce) {
-	*, *::before, *::after {
-		cursor: initial !important;
-	}
-
-	button, button * {
-		cursor: pointer !important;
-	}
+h1, h2, h3, h4, h5, h6 {
+	line-height: normal;
 }
 
 a {
