--- a/src/components/Navbar/ui/Navbar.module.scss
+++ b/src/components/Navbar/ui/Navbar.module.scss
@@ -24,29 +24,44 @@
 
 			.links {
 				display: flex;
-				gap: 24px;
 
 				.link {
 					display: block;
-					width: 24px;
-					height: 24px;
+					width: 32px;
+					height: 32px;
+					margin-right: 16px;
+					padding: 4px;
 
 					&.menu {
 						display: flex;
 						align-items: flex-end;
 						flex-direction: column;
 						justify-content: space-around;
-						padding: 3px;
+						margin-right: 0;
+						padding: 7px;
+						color: #FFFFFF;
 
 						span {
 							display: block;
 							width: 100%;
 							height: 2px;
+							transition: all 0.15s ease-in-out;
 							border-radius: 2px;
 							background-color: currentColor;
 
 							&:last-child {
 								width: 75%;
+							}
+						}
+
+						&[data-state='open'] {
+							span {
+								width: 100%;
+								transform: rotate(45deg) translate(3.5px, 3.5px);
+
+								&:last-child {
+									transform: rotate(-45deg) translate(3px, -2.5px);
+								}
 							}
 						}
 					}
@@ -56,30 +71,47 @@
 
 		.content {
 			display: flex;
-			align-items: center;
 			flex-direction: column;
+			padding: calc(1vw + 28px);
 
 			.links {
 				display: flex;
-				align-items: center;
-				margin-top: 50px;
+				justify-content: center;
+				margin-bottom: calc(1vw + 28px);
+
+				@media (max-width: 592px) {
+					align-items: center;
+					flex-direction: column;
+
+					.link {
+						margin-bottom: 32px;
+					}
+				}
 
 				.link {
 					display: block;
 					width: 100px;
+					padding: 4px 0;
+					text-align: center;
 				}
 			}
 
 			.sm {
 				display: flex;
-				align-items: center;
-				margin: 50px 0;
-				gap: 48px;
+				justify-content: center;
 
-				.link {
-					display: block;
-					width: 32px;
-					height: 32px;
+				.item {
+					margin-right: 32px;
+
+					&:last-child {
+						margin-right: 0;
+					}
+
+					.link {
+						display: block;
+						width: 32px;
+						height: 32px;
+					}
 				}
 			}
 		}
