--- a/src/ui/Button/ui/Button.module.scss
+++ b/src/ui/Button/ui/Button.module.scss
@@ -2,6 +2,7 @@
 	font-weight: 500;
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	padding: 20px 32px;
 	color: #191A23;
 	border: 1px solid #191A23;
