--- a/src/ui/Button/ui/Button.module.scss
+++ b/src/ui/Button/ui/Button.module.scss
@@ -3,14 +3,14 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding: 20px 32px;
+	padding: 1.15em 1.75em;
 	color: #191A23;
 	border: 1px solid #191A23;
 	border-radius: 20px;
 
 	svg {
-		width: 24px;
-		height: 24px;
-		margin-left: 12px;
+		width: 1.333em;
+		height: 1.333em;
+		margin-left: 0.5em;
 	}
 }
