--- a/src/components/Navbar/ui/Navbar.scss
+++ b/src/components/Navbar/ui/Navbar.scss
@@ -4,6 +4,7 @@
 	right: 0;
 	left: 0;
 	color: var(--white-to-black);
+	overflow: hidden;
 
 	&__wrapper {
 		padding: 0 1.333333333em;
@@ -28,12 +29,20 @@
 		gap: 1.333333333em;
 
 		&-item {
-			width: 1.333333333em;
-			height: 1.333333333em;
+			width: 1.777777777em;
+			height: 1.777777777em;
 
 			button {
+				padding: 0.222222222em;
 				width: 100%;
 				height: 100%;
+				border-radius: 0.333333333em;
+				transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+
+				&:hover {
+					color: var(--black-to-primary);
+					background-color: var(--primary-to-black);
+				}
 			}
 
 			.nav-toggle {
@@ -42,29 +51,29 @@
 
 				span {
 					position: absolute;
-					right: 0.222222222em;
+					right: 0.333333333em;
 					width: 100%;
 					height: 2px;
-					transition: all 0.1s ease-in-out 0.1s, transform 0.1s ease-in-out 0s;
+					transition: max-width 0.1s ease-in-out, transform 0.1s ease-in-out 0s, top 0.1s ease-in-out 0.2s;
 					border-radius: 2px;
 					background-color: currentColor;
 
 					&:first-child {
-						top: 0.333333333em;
-						max-width: calc(100% - 0.444444444em);
+						top: 0.555555555em;
+						max-width: calc(100% - 0.666666666em);
 					}
 
 					&:last-child {
-						top: calc(1em - 2px);
-						max-width: calc((100% - 0.444444444em) * 0.75);
+						top: calc(1.222222222em - 2px);
+						max-width: calc((100% - 0.666666666em) * 0.75);
 					}
 				}
 
 				&[data-state='open'] {
 					span {
 						top: calc(50% - 1px);
-						max-width: calc(100% - 0.444444444em);
-						transition: all 0.1s ease-in-out, transform 0.1s ease-in-out 0.1s;
+						max-width: calc(100% - 0.666666666em);
+						transition: max-width 0.1s ease-in-out, top 0.1s ease-in-out, transform 0.1s ease-in-out 0.2s;
 
 						&:first-child {
 							transform: rotate(45deg);
@@ -82,25 +91,48 @@
 
 				svg {
 					display: block;
-					transition: transform 0.2s ease-in-out;
+					transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
 					transform: translateY(0);
+
+					&:first-child {
+						margin-bottom: 0.222222222em;
+						opacity: 1;
+					}
+
+					&:last-child {
+						opacity: 0;
+					}
 				}
 
 				&[aria-checked='true'] svg {
-					transform: translateY(-1.333333333em);
+					transform: translateY(-1.555555555em);
+
+					&:first-child {
+							opacity: 0;
+					}
+
+					&:last-child {
+							opacity: 1;
+					}
 				}
 			}
 		}
 	}
 
 	.submenu {
-		padding: 1.666666666em 0 3.333333333em;
+		padding: 1.666666666em 1.666666666em 3.333333333em;
 
 		&__list {
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			flex-wrap: wrap;
 			gap: 2em;
+
+			@media (max-width: 596px) {
+				flex-direction: column;
+				align-items: center;
+			}
 		}
 	}
 }
