--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -1,18 +1,20 @@
-@import 'variables';
+@use 'variables';
 
 @mixin dynamic-font-size($min-font-size: 14px, $max-font-size: 18px, $lower-range: 512px, $upper-range: 1024px) {
+	--min-width: #{$lower-range};
+	--max-width: #{$upper-range};
+
 	font-size: calc(#{$min-font-size} + #{(($max-font-size / ($max-font-size * 0 + 1)) - ($min-font-size / ($min-font-size * 0 + 1)))} * ((100vw - #{$lower-range}) / #{(($upper-range / ($upper-range * 0 + 1)) - ($lower-range / ($lower-range * 0 + 1)))}));
 
-	@media screen and (max-width: $lower-range) {
+	@media screen and (width <= #{$lower-range}) {
 		font-size: $min-font-size;
 	}
-	@media screen and (min-width: $upper-range) {
+	@media screen and (width >= #{$upper-range}) {
 		font-size: $max-font-size;
 	}
 }
-
 @mixin default-border {
 	border-radius: 50px;
-	border: 1px solid $black-color;
-	box-shadow: 0 5px 0 $black-color;
+	border: 1px solid variables.$black-color;
+	box-shadow: 0 5px 0 variables.$black-color;
 }
