--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -1,8 +1,9 @@
 /**
  * Modern CSS Reset Tweaks
  * ================================================== */
+
 html {
-	-webkit-text-size-adjust: 100%;
+	text-size-adjust: 100%;
 
 	&:focus-within {
 		scroll-behavior: smooth;
@@ -12,19 +13,17 @@ html {
 body {
 	position: relative;
 	width: 100%;
-
 	min-height: 100vh;
 	text-size-adjust: 100%;
-
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
-	text-rendering: optimizeSpeed;
+	text-rendering: optimizespeed;
 }
 
 /* Box sizing normalization */
 *,
-::after,
-::before {
+:after,
+:before {
 	box-sizing: border-box;
 }
 
@@ -162,7 +161,6 @@ q {
 
 	&:before,
 	&:after {
-		content: '';
 		content: none;
 	}
 }
@@ -170,6 +168,7 @@ q {
 /**
  * Input Reset
  */
+
 input:required,
 input {
 	box-shadow: none;
@@ -179,23 +178,19 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-	-webkit-box-shadow: 0 0 0 30px white inset;
+	box-shadow: 0 0 0 30px #FFFFFF inset;
 }
 
-input[type=search]::-webkit-search-cancel-button,
-input[type=search]::-webkit-search-decoration,
-input[type=search]::-webkit-search-results-button,
-input[type=search]::-webkit-search-results-decoration {
-	-webkit-appearance: none;
-	-moz-appearance: none;
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-decoration,
+input[type='search']::-webkit-search-results-button,
+input[type='search']::-webkit-search-results-decoration {
+	appearance: none;
 }
 
-input[type=search] {
-	-moz-box-sizing: content-box;
-	-webkit-box-sizing: content-box;
+input[type='search'] {
 	box-sizing: content-box;
-	-webkit-appearance: none;
-	-moz-appearance: none;
+	appearance: none;
 }
 
 textarea {
@@ -213,6 +208,7 @@ input {
 /**
  * Correct `inline-block` display not defined in IE 6/7/8/9 and Firefox 3.
  */
+
 audio,
 canvas,
 video {
@@ -224,6 +220,7 @@ video {
  * Prevent modern browsers from displaying `audio` without controls.
  * Remove excess height in iOS 5 devices.
  */
+
 audio:not([controls]) {
 	display: none;
 	height: 0;
@@ -232,6 +229,7 @@ audio:not([controls]) {
 /**
  * Address styling not present in IE 7/8/9, Firefox 3, and Safari 4.
  */
+
 [hidden] {
 	display: none;
 }
@@ -239,6 +237,7 @@ audio:not([controls]) {
 /**
  * Improve readability when focused and also mouse hovered in all browsers.
  */
+
 a:active,
 a:hover {
 	outline: none;
@@ -261,6 +260,7 @@ picture {
  * Address Firefox 3+ setting `line-height` on `input` using `!important` in
  * the UA stylesheet.
  */
+
 button,
 input {
 	line-height: normal;
@@ -286,12 +286,13 @@ input[type='submit'] {
 	cursor: pointer;
 	border: 0;
 	background: transparent;
-	-webkit-appearance: button;
+	appearance: button;
 }
 
 /**
  * Re-set default cursor for disabled elements.
  */
+
 button[disabled],
 html input[disabled] {
 	cursor: default;
@@ -304,6 +305,7 @@ html input[disabled] {
 /**
  * 1. Address box sizing set to content-box in IE 8/9.
  */
+
 input[type='checkbox'],
 input[type='radio'] {
 	padding: 0;
@@ -314,25 +316,26 @@ input[type='radio'] {
  * 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
  *    (include `-moz` to future-proof).
  */
+
 input[type='search'] {
-	-moz-box-sizing: content-box;
-	-webkit-box-sizing: content-box;
 	box-sizing: content-box;
-	-webkit-appearance: textfield;
+	appearance: textfield;
 }
 
 /**
  * Remove inner padding and search cancel button in Safari 5 and Chrome
  * on OS X.
  */
+
 input[type='search']::-webkit-search-cancel-button,
 input[type='search']::-webkit-search-decoration {
-	-webkit-appearance: none;
+	appearance: none;
 }
 
 /**
  * Remove inner padding and border in Firefox 3+.
  */
+
 button::-moz-focus-inner,
 input::-moz-focus-inner {
 	padding: 0;
@@ -353,6 +356,7 @@ textarea {
 /**
  * Remove most spacing between table cells.
  */
+
 table {
 	border-spacing: 0;
 	border-collapse: collapse;
@@ -363,6 +367,7 @@ table {
  * Based on normalize.css v8.0.1
  * github.com/necolas/normalize.css
  */
+
 hr {
 	line-height: 0;
 	overflow: visible;
@@ -379,6 +384,7 @@ hr {
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
  */
+
 pre {
 	font-family: monospace, monospace;
 	font-size: 100%;
@@ -387,6 +393,7 @@ pre {
 /**
  * Remove the gray background on active links in IE 10.
  */
+
 a {
 	background-color: transparent;
 }
@@ -395,6 +402,7 @@ a {
  * 1. Remove the bottom border in Chrome 57-
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
+
 abbr[title] {
 	text-decoration: none;
 	border-bottom: none;
@@ -410,6 +418,7 @@ samp {
 /**
  * Add the correct font size in all browsers.
  */
+
 small {
 	font-size: 75%;
 }
@@ -418,6 +427,7 @@ small {
  * Prevent `sub` and `sup` elements from affecting the line height in
  * all browsers.
  */
+
 sub,
 sup {
 	font-size: 75%;
@@ -438,6 +448,7 @@ sup {
  * 1. Change the font styles in all browsers.
  * 2. Remove the margin in Firefox and Safari.
  */
+
 button,
 input,
 optgroup,
@@ -454,6 +465,7 @@ textarea {
  * Show the overflow in IE.
  * 1. Show the overflow in Edge.
  */
+
 button,
 input {
 	/* 1 */
@@ -464,6 +476,7 @@ input {
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
  * 1. Remove the inheritance of text transform in Firefox.
  */
+
 button,
 select {
 	/* 1 */
@@ -473,11 +486,12 @@ select {
 /**
  * Correct the inability to styles clickable types in iOS and Safari.
  */
+
 button,
 [type='button'],
 [type='reset'],
 [type='submit'] {
-	-webkit-appearance: button;
+	appearance: button;
 }
 
 /**
@@ -496,7 +510,6 @@ button::-moz-focus-inner,
 legend {
 	display: block;
 	width: 100%;
-
 	max-width: 100%;
 	white-space: normal;
 	color: inherit;
@@ -514,6 +527,7 @@ body:not(:-moz-handler-blocked) fieldset {
 /**
  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
+
 progress {
 	vertical-align: baseline;
 }
@@ -521,6 +535,7 @@ progress {
 /**
  * Correct the cursor styles of increment and decrement buttons in Chrome.
  */
+
 [type='number']::-webkit-inner-spin-button,
 [type='number']::-webkit-outer-spin-button {
 	height: auto;
@@ -530,28 +545,35 @@ progress {
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline styles in Safari.
  */
+
 [type='search'] {
 	outline-offset: -2px;
+
 	/* 1 */
-	-webkit-appearance: textfield;
+	appearance: textfield;
+
 	/* 2 */
 }
 
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
+
 [type='search']::-webkit-search-decoration {
-	-webkit-appearance: none;
+	appearance: none;
 }
 
 /**
  * 1. Correct the inability to styles clickable types in iOS and Safari.
  * 2. Change font properties to `inherit` in Safari.
  */
+
 ::-webkit-file-upload-button {
 	font: inherit;
+
 	/* 1 */
-	-webkit-appearance: button;
+	appearance: button;
+
 	/* 2 */
 }
 
@@ -561,6 +583,7 @@ progress {
 /*
  * Add the correct display in all browsers.
  */
+
 summary {
 	display: list-item;
 }
