--- a/src/components/Navbar/ui/Navbar/Navbar.scss
+++ b/src/components/Navbar/ui/Navbar/Navbar.scss
@@ -3,8 +3,8 @@
 	top: 2.222222222em;
 	right: 0;
 	left: 0;
-	color: var(--white-to-black);
 	overflow: hidden;
+	color: var(--white-to-black);
 
 	&__wrapper {
 		padding: 0 1.333333333em;
@@ -33,11 +33,11 @@
 			height: 1.777777777em;
 
 			button {
-				padding: 0.222222222em;
 				width: 100%;
 				height: 100%;
-				border-radius: 0.333333333em;
+				padding: 0.222222222em;
 				transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+				border-radius: 0.333333333em;
 
 				&:hover {
 					color: var(--black-to-primary);
@@ -52,37 +52,25 @@
 				span {
 					position: absolute;
 					right: 0.333333333em;
-					width: 100%;
 					height: 2px;
 					transition: max-width 0.1s ease-in-out, transform 0.1s ease-in-out 0s, top 0.1s ease-in-out 0.2s;
 					border-radius: 2px;
-					background-color: currentColor;
+					background-color: currentcolor;
 
 					&:first-child {
 						top: 0.555555555em;
-						max-width: calc(100% - 0.666666666em);
+						width: calc(100% - 0.666666666em);
 					}
 
 					&:last-child {
 						top: calc(1.222222222em - 2px);
-						max-width: calc((100% - 0.666666666em) * 0.75);
+						width: calc((100% - 0.666666666em) * 0.75);
 					}
 				}
 
 				&[data-state='open'] {
-					span {
-						top: calc(50% - 1px);
-						max-width: calc(100% - 0.666666666em);
-						transition: max-width 0.1s ease-in-out, top 0.1s ease-in-out, transform 0.1s ease-in-out 0.2s;
-
-						&:first-child {
-							transform: rotate(45deg);
-						}
-
-						&:last-child {
-							transform: rotate(-45deg);
-						}
-					}
+					color: var(--black-to-primary);
+					background-color: var(--primary-to-black);
 				}
 			}
 
@@ -108,11 +96,11 @@
 					transform: translateY(-1.555555555em);
 
 					&:first-child {
-							opacity: 0;
+						opacity: 0;
 					}
 
 					&:last-child {
-							opacity: 1;
+						opacity: 1;
 					}
 				}
 			}
@@ -125,13 +113,29 @@
 		&__list {
 			display: flex;
 			align-items: center;
-			justify-content: center;
 			flex-wrap: wrap;
+			justify-content: center;
 			gap: 2em;
 
-			@media (max-width: 596px) {
-				flex-direction: column;
+			@media screen and (width <= 676px) {
 				align-items: center;
+				flex-direction: column;
+			}
+		}
+
+		&__link {
+			padding: 0 1em;
+			transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+			border-radius: 0.333333333em;
+
+			&:hover {
+				color: var(--black-to-primary);
+				background-color: var(--primary-to-black);
+			}
+
+			@media screen and (width <= 676px) {
+				width: 6em;
+				text-align: center;
 			}
 		}
 	}
