--- a/src/components/ButtonLink/ui/ButonLink.scss
+++ b/src/components/ButtonLink/ui/ButonLink.scss
@@ -11,10 +11,20 @@
 	border-radius: 1em;
 	gap: 0.6em;
 
-	@include dynamic-font-size(16px, 20px);
+	@include dynamic-font-size(14px, 20px);
 
 	&.light {
 		border: 1px solid var(--black-to-white);
+
+		&:hover {
+			color: var(--white-to-black);
+			border-color: variables.$black-color;
+			background-color: var(--black-to-primary);
+
+			.icon {
+				color: var(--primary-to-black);
+			}
+		}
 	}
 
 	&.dark {
@@ -24,88 +34,90 @@
 		.icon {
 			color: var(--primary-to-black);
 		}
+
+		&:hover {
+			color: var(--black-to-white);
+			border-color: variables.$black-color;
+			background-color: var(--primary-to-black);
+
+			.icon {
+				color: var(--black-to-primary);
+			}
+		}
 	}
 
 	&__icon {
 		height: 1.2em;
 	}
 
-	&:hover {
-		color: var(--white-to-black);
-		border-color: variables.$black-color;
-		background-color: var(--black-to-primary);
+	&:hover .icon {
+		[class*='__blink'] {
+			animation: blink-animation 2.4s infinite;
+			opacity: 0;
 
-		.icon {
-			color: var(--primary-to-black);
+			&[class*='__delay-1'] {
+				animation-delay: 0.1s;
+			}
 
-			*[class*='__blink'] {
-				animation: blink-animation 2.4s infinite;
-				opacity: 0;
+			&[class*='__delay-2'] {
+				animation-delay: 0.2s;
+			}
 
-				&[class*='__delay-1'] {
-					animation-delay: 0.1s;
+			&[class*='__delay-3'] {
+				animation-delay: 0.3s;
+			}
+
+			&[class*='__delay-4'] {
+				animation-delay: 0.4s;
+			}
+
+			&[class*='__delay-5'] {
+				animation-delay: 0.5s;
+			}
+
+			&[class*='__delay-6'] {
+				animation-delay: 0.6s;
+			}
+
+			&[class*='__delay-7'] {
+				animation-delay: 0.7s;
+			}
+
+			&[class*='__delay-8'] {
+				animation-delay: 0.8s;
+			}
+
+			&[class*='__delay-9'] {
+				animation-delay: 0.9s;
+			}
+
+			&[class*='__delay-10'] {
+				animation-delay: 1s;
+			}
+
+			&[class*='__delay-11'] {
+				animation-delay: 1.1s;
+			}
+
+			&[class*='__delay-12'] {
+				animation-delay: 1.2s;
+			}
+
+			@keyframes blink-animation {
+				0% {
+					opacity: 0;
 				}
-
-				&[class*='__delay-2'] {
-					animation-delay: 0.2s;
+				4.166666666% {
+					opacity: 1;
 				}
-
-				&[class*='__delay-3'] {
-					animation-delay: 0.3s;
+				45.833333333% {
+					opacity: 1;
 				}
-
-				&[class*='__delay-4'] {
-					animation-delay: 0.4s;
+				46% {
+					opacity: 0;
 				}
-
-				&[class*='__delay-5'] {
-					animation-delay: 0.5s;
-				}
-
-				&[class*='__delay-6'] {
-					animation-delay: 0.6s;
-				}
-
-				&[class*='__delay-7'] {
-					animation-delay: 0.7s;
-				}
-
-				&[class*='__delay-8'] {
-					animation-delay: 0.8s;
-				}
-
-				&[class*='__delay-9'] {
-					animation-delay: 0.9s;
-				}
-
-				&[class*='__delay-10'] {
-					animation-delay: 1s;
-				}
-
-				&[class*='__delay-11'] {
-					animation-delay: 1.1s;
-				}
-
-				&[class*='__delay-12'] {
-					animation-delay: 1.2s;
-				}
-
-				@keyframes blink-animation {
-					0% {
-						opacity: 0;
-					}
-					4.166666666% {
-						opacity: 1;
-					}
-					45.833333333% {
-						opacity: 1;
-					}
-					46% {
-						opacity: 0;
-					}
-					100% {
-						opacity: 1;
-					}
+				100% {
+					opacity: 1;
 				}
 			}
 		}
